--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       background-image: url('https://img.freepik.com/vector-gratis/fondo-hojas-tropicales-dibujadas-mano-grabado_23-2148953288.jpg'); /* fondo con corazones */
       background-size: cover;
       background-position: center;
-      font-family: 'Comic Sans MS', cursive, sans-serif;
+      font-family: 'Poppins', sans-serif;
       color: white;
       display: flex;
       flex-direction: column;
